# AI-FIT

./: .replit  README.md  app.py  exercise_gifs.py  pose_camera.html  pyproject.toml  replit.md  simple_app.py
.streamlit/: config.toml
components/: bmi_calculator.py  dashboard.py  pose_detector.py  workout_planner.py
data/: exercise_library.json  workout_data.csv
models/: body_type_classifier.py  lstm_recommender.py
static/: pose_detection.html
utils/: data_loader.py  pose_detection.py  youtube_api.py
