[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "imageio>=2.37.0",
    "matplotlib>=3.10.5",
    "numpy>=2.3.2",
    "opencv-python>=4.11.0.86",
    "pandas>=2.3.1",
    "pickle-mixin>=1.0.2",
    "pillow>=11.3.0",
    "plotly>=6.2.0",
    "requests>=2.32.4",
    "scikit-learn>=1.7.1",
    "streamlit>=1.48.0",
    "tensorflow>=2.14.0",
]
